css fix for word wrapping in ck editor

--- a/www/sites/all/themes/seven/reset.css
+++ b/www/sites/all/themes/seven/reset.css
@@ -214,3 +214,8 @@ ul.inline:after {
 *:first-child + html .clearfix {
   min-height: 1%;
 }
+
+/*** a fix to some library css in ckeditor ***/
+textarea.cke_source {
+  white-space: pre-wrap !important;
+}
